--- a/app/javascript/styles/modal.scss
+++ b/app/javascript/styles/modal.scss
@@ -28,8 +28,11 @@
   -ms-transition: $transition;
   transition: $transition;
 }
+// *************************
+// **********POPUP**********
+// *************************
 
-.modal{
+.popup{
   position: absolute;
   top: -90rem;
   align-self: center;
@@ -72,8 +75,7 @@
   }
 }
 
-
-.modal_background{
+.popup_background{
   position: fixed;
   top: 0;
   left: 0;
@@ -88,4 +90,36 @@
 
 
 
+// *************************
+// **********MODAL**********
+// *************************
+
+.modal {
+  position: absolute;
+  top: -90rem;
+  align-self: center;
+  @include center(horizontal);
+  background: #ffffff;
+  box-shadow: 0 0 1rem rgba(0,0,0,0.5);
+  @include transition(all 0.3s ease);
+  outline: none;
+  bottom: 1%;
+  top: 5rem;
+  width: 55rem;
+  height: 35rem;
+  padding: 2rem 2rem;
+  overflow: auto;
+}
+
+.modal_background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  z-index: 900;
+}
 
