--- a/app/javascript/styles/modal.scss
+++ b/app/javascript/styles/modal.scss
@@ -62,6 +62,21 @@
   padding: 1rem 2rem;
 }
 
+.mid_popup {
+  position: absolute;
+  align-self: center;
+  @include center(horizontal);
+  background: #ffffff;
+  box-shadow: 0 0 1rem rgba(0,0,0,0.5);
+  @include transition(all 0.3s ease);
+  outline: none;
+  bottom: 1%;
+  top: 8rem;
+  width: 30rem;
+  height: 22rem;
+  padding: 1rem 2rem;
+}
+
 .popup-header{
   display: flex;
   flex-direction: row;
