--- a/app/javascript/styles/styles.scss
+++ b/app/javascript/styles/styles.scss
@@ -103,6 +103,14 @@
   background-color: #00aaff;
 }
 
+.icon-button {
+  font-size: 1.4rem;
+  align-self: center;
+  justify-content: center;
+  cursor: pointer;
+  padding-left: .5rem;
+}
+
 .icon-button-add {
   font-size: 1.4rem;
   align-self: center;
@@ -137,6 +145,7 @@
 
 .category-body {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
