--- a/app/javascript/styles/styles.scss
+++ b/app/javascript/styles/styles.scss
@@ -33,11 +33,14 @@
 }
 .main-month-name{
   font-size: 3rem;
-  padding: 1rem;
+  padding: 0 1rem;
 }
 
 .goto-month-name {
-  padding: 1rem;
+  padding: .5rem 1rem 0 1rem;
+  justify-content: center;
+  align-self: center;
+  cursor: pointer;
 }
 
 .category-box {
@@ -235,6 +238,12 @@
 .btn-container {
   text-align: center;
   padding: 1rem;
+}
+
+.btn-container-small {
+  font-size: 2rem;
+  text-align: center;
+  padding: 0.5rem;
 }
 
 .btn-delete {
