added styles for phone

--- a/app/javascript/styles/modal.scss
+++ b/app/javascript/styles/modal.scss
@@ -42,8 +42,8 @@
   outline: none;
   bottom: 1%;
   top: 5rem;
-  width: 30rem;
-  height: 40%;
+  width: 55rem;
+  height: 50%;
   padding: 1rem 2rem;
 }
 
@@ -57,8 +57,8 @@
   outline: none;
   bottom: 1%;
   top: 15rem;
-  width: 20rem;
-  height: 10rem;
+  width: 30rem;
+  height: 16rem;
   padding: 1rem 2rem;
 }
 
@@ -85,20 +85,20 @@
 }
 
 .popup-title{
-  font-size: 3rem;
+  font-size: 6rem;
   justify-content: center;
   align-self: center;
 }
 
 .popup-close{
-  font-size: 2rem;
+  font-size: 6rem;
   align-self: center;
   cursor: pointer;
 }
 
 .popup-body{
   margin: 0 2rem;
-  font-size: 1.5rem;
+  font-size: 4.5rem;
 }
 
 .popup_background{
@@ -115,7 +115,7 @@
 }
 
 .popup-bottom {
-  padding: 1rem;
+  padding: 4rem 2rem;
 
 }
 
