--- a/app/javascript/styles/styles.scss
+++ b/app/javascript/styles/styles.scss
@@ -31,8 +31,8 @@
 }
 
 .month-info-container {
-  font-size: 3rem;
-  padding: 1rem;
+  font-size: 2.5rem;
+  padding: 1m;
 }
 .main-month-name{
   font-size: 6rem;
